--- a/roles/maas_firewall/tasks/setup_firewall_rules.yaml
+++ b/roles/maas_firewall/tasks/setup_firewall_rules.yaml
@@ -46,6 +46,13 @@
     protocol: udp
     destination_port: 53
     jump: ACCEPT
+    
+- name: Allow port 23267 tcp
+  ansible.builtin.iptables:
+    chain: INPUT
+    protocol: tcp
+    destination_port: 23267
+    jump: ACCEPT
 
 - name: Open tcp ports
   ansible.builtin.iptables:
